fix: Reverted a change to p{} + Realigned about section as it was effected

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,13 +100,15 @@ h1{
 }
 
 .tab-in{
+    margin-top: 62px;
     margin-left: 50px;
+    margin-bottom: 50px;
     width: 890px;
 }
 
 p{
     font-size: 20px;
-    margin-top: 52px;
+    
     padding: 10px;
 }
 .label{
@@ -140,6 +142,7 @@ p{
 
 #column-image{
     float: right;
+    margin-top: 30px;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url(../assets/Cylinder_unglazed3_2048x2048.jpg);
@@ -172,6 +175,7 @@ p{
     background-image: url(../assets/Vase_Dame_2048x2048.jpg);
     width: 397px;
     height: 534px;
+    margin-top: 15px;
 }
 
 .between-text{
@@ -180,4 +184,37 @@ p{
     padding-top: 0;
     padding-left: 74px;
     padding-right: 20px;
+    margin-top: 15px;
+}
+
+.wrapper{
+    display: grid;
+    grid-template-areas: "1 2 3" "4 5 6" "7 8 9";
+    background-color: #a1a1d1;
+    width: 100%;
+    height: 2400px;
+    align-content: space-between;
+    justify-content: space-between;
+    
+}
+
+.child{
+    height: 692px;
+    width: 395px;
+    display: flex;
+    flex-direction: column;
+}
+
+#mundo{
+    background-size:auto;
+    background-repeat: no-repeat;
+    background-image: url(../assets/tom-crew-7HuTGlUfQSo-unsplash.jpg);
+    height: 398px;
+    width: 398px;
+    
+}
+
+.card-text{
+    margin-left: 0;
+    padding: 0;
 }
